[package]
name = "rustprobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
modinsert = "0.1.0"
nix = { version = "0.26.2", features = ["kmod"] }
